04.Example/01_music_player/build/log/idf_py_stdout_output_95745
[1/12] Performing build step for 'bootloader'
[1/1] cd /Users/wangjiaqi/Documents/Github/esp32-develop-board/04.Example/01_mp3_player/build/bootloader/esp-idf/esptool_py && /Users/wangjiaqi/.espressif/python_env/idf5.2_py3.13_env/bin/python /Users/wangjiaqi/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/wangjiaqi/Documents/Github/esp32-develop-board/04.Example/01_mp3_player/build/bootloader/bootloader.bin
Bootloader binary size 0x68b0 bytes. 0x750 bytes (7%) free.
[2/12] No install step for 'bootloader'
[3/12] Completed 'bootloader'
[4/12] Building C object esp-idf/sd_spi/CMakeFiles/__idf_sd_spi.dir/sd_spi.c.obj
FAILED: esp-idf/sd_spi/CMakeFiles/__idf_sd_spi.dir/sd_spi.c.obj 
/Users/wangjiaqi/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2.5\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/wangjiaqi/Documents/Github/esp32-develop-board/04.Example/01_mp3_player/build/config -I/Users/wangjiaqi/Documents/Github/esp32-develop-board/04.Example/01_mp3_player/components/sd_spi/include -I/Users/wangjiaqi/esp/esp-idf/components/newlib/platform_include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/include/freertos -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/wangjiaqi/esp/esp-idf/components/freertos/esp_additions/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/wangjiaqi/esp/esp-idf/components/heap/include -I/Users/wangjiaqi/esp/esp-idf/components/log/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32 -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/platform_port/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/esp32/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/esp32 -I/Users/wangjiaqi/esp/esp-idf/components/esp_common/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/soc -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/include/private -I/Users/wangjiaqi/esp/esp-idf/components/xtensa/esp32/include -I/Users/wangjiaqi/esp/esp-idf/components/xtensa/include -I/Users/wangjiaqi/esp/esp-idf/components/xtensa/deprecated_include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include/apps -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/wangjiaqi/esp/esp-idf/components/lwip/lwip/src/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/freertos/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/wangjiaqi/esp/esp-idf/components/fatfs/diskio -I/Users/wangjiaqi/esp/esp-idf/components/fatfs/src -I/Users/wangjiaqi/esp/esp-idf/components/fatfs/vfs -I/Users/wangjiaqi/esp/esp-idf/components/wear_levelling/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_partition/include -I/Users/wangjiaqi/esp/esp-idf/components/sdmmc/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/deprecated -I/Users/wangjiaqi/esp/esp-idf/components/driver/analog_comparator/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/dac/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/gpio/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/gptimer/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/i2c/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/i2s/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/ledc/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/mcpwm/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/parlio/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/pcnt/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/rmt/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/sdio_slave/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/sdmmc/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/sigma_delta/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/spi/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/temperature_sensor/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/touch_sensor/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/twai/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/uart/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/usb_serial_jtag/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_pm/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/wangjiaqi/Documents/Github/esp32-develop-board/04.Example/01_mp3_player=. -fmacro-prefix-map=/Users/wangjiaqi/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/sd_spi/CMakeFiles/__idf_sd_spi.dir/sd_spi.c.obj -MF esp-idf/sd_spi/CMakeFiles/__idf_sd_spi.dir/sd_spi.c.obj.d -o esp-idf/sd_spi/CMakeFiles/__idf_sd_spi.dir/sd_spi.c.obj -c /Users/wangjiaqi/Documents/Github/esp32-develop-board/04.Example/01_mp3_player/components/sd_spi/sd_spi.c
/Users/wangjiaqi/Documents/Github/esp32-develop-board/04.Example/01_mp3_player/components/sd_spi/sd_spi.c: In function 'create_file_and_folder':
/Users/wangjiaqi/Documents/Github/esp32-develop-board/04.Example/01_mp3_player/components/sd_spi/sd_spi.c:190:1: error: control reaches end of non-void function [-Werror=return-type]
  190 | }
      | ^
/Users/wangjiaqi/Documents/Github/esp32-develop-board/04.Example/01_mp3_player/components/sd_spi/sd_spi.c: In function 'read_file_and_folder':
/Users/wangjiaqi/Documents/Github/esp32-develop-board/04.Example/01_mp3_player/components/sd_spi/sd_spi.c:195:1: error: control reaches end of non-void function [-Werror=return-type]
  195 | }
      | ^
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
